# set-voice-agent-delivery

./: .env.example  .gitignore  CLAUDE.md  README.md  START.md  config.yaml  contacts.yaml  contacts.yaml.example  projects.yaml  pyproject.toml
.claude/: .set-version  settings.json
.claude/agents/: code-reviewer.md
.claude/rules/: call-safety.md  set-cross-cutting-checklist.md  set-design-bridge.md  set-modular-architecture.md  set-openspec-artifacts.md  set-project-guide.md  set-readme-updates.md  set-sentinel-autonomy.md  voice-ai.md
.set/: activity.json
.set/agents/: 3328022.skill  365210.skill
call_scripts/: website_followup.yaml
docs/: SETUP.md
src/: __main__.py  agent.py  agent_cache.py  agent_tools.py  call_runner.py  call_summary.py  caller_lookup.py  config.py  i18n.py  inbound_server.py  local_agent.py  logger.py  metrics.py  pipeline.py  project_context.py  project_indexer.py  response_layers.py  safety.py  script_loader.py  state.py  test_chat.py  twilio_setup.py  webhook.py
src/providers/: __init__.py  base.py  google_tts.py  soniox_stt.py  twilio_provider.py
static/: voice-widget.html  voice-widget.js
tests/: test_agent.py  test_agent_tools.py  test_backchannel.py  test_call_runner.py  test_caller_lookup.py  test_config.py  test_google_tts.py  test_local_agent.py  test_logger.py  test_metrics.py  test_pipeline.py  test_project_context.py  test_project_indexer.py  test_response_layers.py  test_safety.py  test_script_loader.py  test_soniox_stt.py  test_state.py  test_streaming.py  test_twilio_provider.py  test_webhook.py
(+109 files in other folders)
